fixed ie11 tooltip not wrapping as expected

--- a/src/_scss/pages/recipient/_contentWrap.scss
+++ b/src/_scss/pages/recipient/_contentWrap.scss
@@ -61,6 +61,7 @@
 	
 						.recipient-overview-tooltip {
 							@include display(inline-block);
+							width: 100%;
 						}
 
 						svg {
